--- a/src/BandsSpace.css
+++ b/src/BandsSpace.css
@@ -1,6 +1,7 @@
 .BandsSpace {
   margin-top: 20px;
   border-style: double;
+  border-color: #5a5a5a;
   padding-top: 0;
   padding-bottom: 30px;
 }
